Open a picture in the external viewer from the main view (#653993)

Add a new entry under the context and the "Actions" menu to open
the selected pictures in the external image viewer.

https://bugzilla.gnome.org/show_bug.cgi?id=653993